src/test/deca/context/invalid/created/test-a-6.deca
class A{
    int x = 15.12;
    
}